# mtfind

./: CMakeLists.txt  README.md  finder.cpp  finder.h  logger.h  main.cpp  thread_pool.cpp  thread_pool.h
.github/workflows/: cmake-multi-platform.yml
src/: finder.cpp  logger.h  main.cpp
